--- a/modern/.env.production
+++ b/modern/.env.production
@@ -1,4 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_URL_NAME=traccar.tonbridge-scouts.org.uk
 REACT_APP_BING_KEY=AqVat8HR9TsQF1uwWckLU_1Dv_wrrDR3ThriJUmZyDhPcHRGwpeTDA9NVhKaS5RX
+PUBLIC_URL=/modern/
 DISABLE_ESLINT_PLUGIN=true
