--- a/modern/.env.production
+++ b/modern/.env.production
@@ -1,3 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_URL_NAME=traccar.tonbridge-scouts.org.uk
 DISABLE_ESLINT_PLUGIN=true
+REACT_APP_VERSION=$npm_package_version
