--- a/modern/public/manifest.json
+++ b/modern/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "${title}",
-  "name": "${description}",
+ "short_name": "Traccar",
+  "name": "Traccar GPS Tracking System",
   "icons": [
     {
       "src": "favicon.ico",
@@ -22,6 +22,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "${colorPrimary}",
+  "theme_color": "#1a237e",
   "background_color": "#ffffff"
 }
